# cmakevisualstudio

./: .gitignore  README.md
demo1/: main.cpp
demo2/: CMakeLists.txt  MathFunctions.cpp
demo3/: CMakeLists.txt  main.cpp
demo3/math/: MathFunctions.cpp
demo3_1/: CMakeLists.txt  main.cpp
demo3_1/math/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
demo4/: CMakeLists.txt  main.cpp
demo4/math/: CMakeLists.txt
